Update project.clj based on camsaul/clojure-library-template